--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     <li>config</li>
                     <li>add</li>
                     <li>add by pyuanan</li>
-		    <li></li>
-                    <li></li>
+		    <li>fetch</li>
+                    <li>merge</li>
                     <li></li>
                     <li></li>
                     <li></li>
