修改了index中错误的命令

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		    <li>fetch</li>
                     <li>merge</li>
 		    <li>rm</li>
-                    <li>ra</li>
+                    <li>log</li>
                     <li></li>
                     <li></li>
                     <li></li>
